--- a/my-blog/src/components/pages/communal/DetailContent/DetailContent.css
+++ b/my-blog/src/components/pages/communal/DetailContent/DetailContent.css
@@ -1,3 +1,15 @@
-.contentArticle{
+.contentArticle {
     line-height: 5vh;
+}
+.contentArticle h1 {
+    font-size: 1.4rem;
+}
+.contentArticle h2 {
+    font-size: 1.3rem;
+}
+.contentArticle h3 {
+    font-size: 1.2rem;
+}
+.contentArticle h4 {
+    font-size: 1.1rem;
 }
