--- a/my-blog/src/components/pages/communal/Header/Header.css
+++ b/my-blog/src/components/pages/communal/Header/Header.css
@@ -21,9 +21,21 @@
     font-style: italic;
 }
 
-.navlinkSearch{
+.navlinkSearch {
     color: rgb(22, 119, 255);
 }
-.navlinkSearch:hover{
+.navlinkSearch:hover {
     color: rgb(105, 177, 255);
+}
+
+@media (max-width: 500px) {
+    * {
+        font-size: 0.6rem;
+    }
+    .Header-search {
+        display: none;
+    }
+    .skylerFont {
+        font-size: 10px;
+    }
 }
